| Bug #30444 | 5.0 mysqldump silently allows wrong backup to be taken against a 4.0 database | ||
|---|---|---|---|
| Submitted: | 15 Aug 2007 18:33 | Modified: | 24 Oct 2007 21:56 |
| Reporter: | Mark Leith | ||
| Status: | Closed | ||
| Category: | Server: Backup | Severity: | S2 (Serious) |
| Version: | 5.0.33+ | OS: | Any |
| Assigned to: | Tatjana A. Nuernberg | Target Version: | |
| Tags: | regression | ||
[15 Aug 2007 18:33]
Mark Leith
[2 Oct 2007 21:35]
Timothy Smith
Code is OK. Instead of "read may not be consistent!", it might be better to say "backup may not be consistent across all tables" or similar. White space looks a bit funky, may just be cut-n-paste artifacts.
[4 Oct 2007 8:27]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/34867 ChangeSet@1.2675, 2007-10-04 08:27:03+02:00, tnurnberg@sin.intern.azundris.com +1 -0 Bug #30444: 5.0 mysqldump silently allows wrong backup to be taken against a 4.0 database The combination of --single-transaction and --master-data requires START TRANSACTION WITH CONSISTENT SNAPSHOT which is available from mysqld 4.1 on. When trying this against an older server, print diagnostic, then, if --force is not given, abort. No test-case given since it would require a mysqld < 4.1.
[5 Oct 2007 1:01]
Tatjana A. Nuernberg
pushed to 4.1.24, 5.0.52, 5.1 maint trees
[18 Oct 2007 23:34]
Bugs System
Pushed into 5.1.23-beta
[18 Oct 2007 23:37]
Bugs System
Pushed into 5.0.52
[18 Oct 2007 23:37]
Bugs System
Pushed into 4.1.24
[24 Oct 2007 21:56]
Paul DuBois
Noted in 4.1.24, 5.0.52, 5.1.23 changelogs. Versions of mysqldump from MySQL 4.1 or higher tried to use START TRANSACTION WITH CONSISTENT SNAPSHOT if the --single-transaction and --master-data options were given, even with servers older than 4.1 that do not support consistent snapshots.
